syn-state-machine/src/impls/snapshots/syn_state_machine__impls__ident__tests__it_fails_on_incorrect.snap
---
source: syn-state-machine/src/impls/ident.rs
expression: "crate::parse::<FIdent<\"id\">>(::quote::quote! { ident })"
---
Err(
    Val(
        Ident {
            sym: ident,
        },
    ),
)
