syn-state-machine/src/impls/snapshots/syn_state_machine__impls__ident__tests__it_matches_fixed.snap
---
source: syn-state-machine/src/impls/ident.rs
expression: "crate::parse::<FIdent<\"id\">>(::quote::quote! { id })"
---
Ok(
    (
        FIdent(
            Ident(
                id,
            ),
        ),
        0,
    ),
)
