syn-state-machine/src/impls/snapshots/syn_state_machine__impls__ident__tests__it_matches_id.snap
---
source: syn-state-machine/src/impls/ident.rs
expression: "crate::parse::<Ident>(::quote::quote! { id })"
---
Ok(
    (
        Ident(
            id,
        ),
        0,
    ),
)
